fix: align center button's text

--- a/frontend/src/pages/Admin/Form.module.css
+++ b/frontend/src/pages/Admin/Form.module.css
@@ -84,11 +84,13 @@
 .submitButton {
   background-color: #0ec94f;
   color: white;
+  text-align: center;
 }
 
 .cancelButton {
   background-color: #e51212;
   color: white;
+  text-align: center;
 }
 
 .submitButton:hover,
